# PolynomialTesselation

./: README.ipynb  README.md  setup.cfg
src/PolynomialTesselation/: PolynomialTesselation.py
src/PolynomialTessellation/: PolynomialTessellation.py  __init__.py
