[metadata]
name = PolynomialTesselation
version = 1.0.0
author = Kevin Welsh
author_email = kevinwelsh132@gmail.com
description = A package to generate a continuously differentiable quadratic tiling of n-dimensional space.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kpwelsh/PolynomialTesselation
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src